Done Web50 Project 0

--- a/advancedsearch copy.html
+++ b/advancedsearch copy.html
@@ -8,8 +8,8 @@
         <!-- Logo downloaded from https://www.google.com.my/images/branding/googlelogo/2x/googlelogo_color_160x56dp.png -->
         <a href="index.html"><img src="googleindex.png" alt="Google Logo" id="advanced-logo"></a>
         <div class=index-menu>
-            <a href="index.html" class="index-menu-individu">Google</a>
-            <a href="imagesearch.html" class="index-menu-individu">Images</a>
+            <a href="index.html" class="index-menu-individu">Google Search</a>
+            <a href="imagesearch.html" class="index-menu-individu">Image Search</a>
         </div>
         <div Class="advsearch-header">
             Advanced Search
@@ -19,6 +19,12 @@
                 Find pages with...
             </div>
             <form action="https://google.com/search" class="adv-form">
+                <div>
+                    <span>all these words</span>
+                    <input
+                </div>
+
+
                 <label for="all-these">all these words:
                     <input class="adv-text-field" id="all-these" autofocus autocomplete="off" type="text" name="as_q"><br>
                 </label>
@@ -30,18 +36,9 @@
                 </label>
                 <label for="none-of">none of these words:
                     <input class="adv-text-field" id="none-of" autofocus autocomplete="off" type="text" name="as_eq"><br>
-                </label><br>
-                <div class="adv-sub-btn">
-                    <input class="adv-submit-btn" id="adv-search-btn" type="submit"  value="Advanced Search">
-                </div>
+                </label>
+                <input class="submit-btn" type="submit" value="Advanced Search">
             </form>
-        </div>
-        <div class="desc-all" id="xa">
-            <div class="desc-indi-head" id="desc-header">To do this in the search box.</div>
-            <div class="desc-indi">Type the important words: tri-colour rat terrier</div>
-            <div class="desc-indi">Put exact words in quotes: "rat terrier"</div>
-            <div class="desc-indi">Type OR between all the words you want: miniature OR standard</div>
-            <div class="desc-indi">Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"</div>
         </div>
     </body>
 </html>
