--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <div class=index-menu>
-            <a href="imagesearch.html" class="index-menu-individu">Image Search</a>
-            <a href="advancedsearch.html" class="index-menu-individu">Advanced Search</a>
+            <a href="imagesearch.html" class="index-menu-individu">Images</a>
+            <a href="advancedsearch.html" class="index-menu-individu">Advanced</a>
         </div>
         <div class=index-all>
             <div class="index-google-logo">
