--- a/imagesearch.html
+++ b/imagesearch.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <div class=index-menu>
-            <a href="index.html" class="index-menu-individu">Google Search</a>
-            <a href="advancedsearch.html" class="index-menu-individu">Advanced Search</a>
+            <a href="index.html" class="index-menu-individu">Google</a>
+            <a href="advancedsearch.html" class="index-menu-individu">Advanced</a>
         </div>
         <div class=image-all>
             <div class="index-google-logo">
