fixed google image

--- a/imagesearch.html
+++ b/imagesearch.html
@@ -14,8 +14,8 @@
                 <!-- Logo downloaded from https://en.wikipedia.org/wiki/Google_Images -->
                 <img src="googleimage.png" alt="Google Homepage Logo" id="googleimage-logo">
             </div>
-            <form action="https://google.com/search">
-                <input class="text-field" autofocus autocomplete="off" type="text" name="q"><br>
+            <form action="https://google.com/search" class="img-all">
+                <input id="img-textfield" class="text-field" autofocus autocomplete="off" type="text" name="q"><br>
                 <input type="hidden" name="tbm" value="isch">
                 <!-- Logo downloaded from https://www.pinclipart.com/pindetail/bTbohi_free-navy-google-web-search-icon-transparent-background/ -->
                 <input type="image" src="bluesearchicon.png" alt="Blue Search Icon" id="bluesearchicon">
